--- a/web/jsf/recherche.xhtml
+++ b/web/jsf/recherche.xhtml
@@ -43,13 +43,31 @@
                                         <td>
                                             <c:if test="#{Controler.isProductible(item)}">
                                                 <ul>
-                                                <c:forEach var="real" items="#{item.releases}">
-                                                    <li>
-                                                        <h:form>
-                                                            <h:commandLink action="#{DynamicView.createPage(real.id, real.toString(), real.class.getName())}" value="#{real.toString()}"/>
-                                                        </h:form>
-                                                    </li>
-                                                </c:forEach>
+                                                    <table>
+                                                        <c:forEach var="real" items="#{item.releases}">
+                                                            <tr>
+                                                                    <td>
+                                                                    <h:form>
+                                                                        <h:commandLink action="#{DynamicView.createPage(real.id, real.toString(), real.class.getName())}" value="#{real.toString()}"/>
+                                                                    </h:form>
+                                                                    </td>
+                                                                    <td>
+                                                                        <ul>
+                                                                            <c:forEach var="prod" items="#{real.products}">
+                                                                                <li>
+                                                                                    <h:form>
+                                                                                        <h:commandLink action="#{DynamicView.createPage(prod.id, real.nom, prod.class.getName())}" value="#{real.toString()}"/>
+                                                                                    </h:form>
+                                                                                    Prix : <h:outputText value="#{prod.prix}"/><br/>
+                                                                                    Vendu par : <h:outputText value="#{prod.vendor}"/><br/>
+                                                                                    Stock restant : <h:outputText value="#{prod.stock}"/><br/>
+                                                                                </li>
+                                                                            </c:forEach>
+                                                                        </ul>
+                                                                    </td>
+                                                                </tr>
+                                                        </c:forEach>
+                                                    </table>
                                                 </ul>
                                             </c:if>
                                         </td>
