--- a/web/jsf/panier.xhtml
+++ b/web/jsf/panier.xhtml
@@ -17,22 +17,25 @@
         <div id="top">
             <ui:include src="../template/top.xhtml"/>
         </div>
+        <div id="menu">
+            <ui:include src="../template/menu.xhtml"/>
+        </div>
         <div>
-            <div id="left">
-                <ui:insert name="left">Left</ui:insert>
-            </div>
             <div>
-                <div id="right">
-                    <ui:insert name="right">Right</ui:insert>
-                </div>
                 <div id="content" class="right_content">
                     <c:if test="#{empty UserView.user.id}">
+                        <c:if test="#{empty CartView.cart.list}">
+                            <h2>Votre panier est vide</h2>
+                        </c:if>
                         <c:forEach var="test" items="#{CartView.cart.list}">
                             Produit : <h:outputText value="#{test.prod}"/> 
                             quantité : <h:outputText value="#{test.quantity}"/><br/>
                         </c:forEach>
                     </c:if>
                     <c:if test="#{not empty UserView.user.id}">
+                        <c:if test="#{empty UserView.user.cart.list}">
+                            <h2>Votre panier est vide</h2>
+                        </c:if>
                         <c:forEach var="test" items="#{UserView.user.cart.list}">
                             Produit : <h:outputText value="#{test.prod}"/> 
                             quantité : <h:outputText value="#{test.quantity}"/><br/>
