ajout de navigations rules ajout d'une fonction de calcul de prix reel dans Product

--- a/web/jsf/article.xhtml
+++ b/web/jsf/article.xhtml
@@ -30,7 +30,7 @@
                             <c:if test="#{DynamicView.bean.reduction != 0}">
                                 <h:outputText value="#{DynamicView.bean.prix}" style="text-decoration: line-through;"/><br/>
                             </c:if>
-                            <h:outputText value="#{DynamicView.bean.prix}"/> €<br/>
+                            <h:outputText value="#{DynamicView.bean.getRealPrice()}"/> €<br/>
                             <h:form>
                                 <c:if test="#{empty UserView.user.id}">
                                 <h:selectOneMenu value="#{CartView.quantiteVoulue}">
