userStatu dans toutes les pages gwt dossier gwt, css

--- a/web/gwt/ajouterImage.html
+++ b/web/gwt/ajouterImage.html
@@ -7,10 +7,11 @@
 <html>
   <head>
     <!--<meta name='gwt:module' content='org.yournamehere.Main=org.yournamehere.Main'>-->                                                            
-    <link rel="stylesheet" type="text/css" href="welcomeGWT.css">
-    <link rel="stylesheet" type="text/css" href="MenuBar.css">
+    <link rel="stylesheet" type="text/css" href="../resources/css/welcomeGWT.css">
+    <link rel="stylesheet" type="text/css" href="../resources/css/MenuBar.css">
+    <link rel="stylesheet" type="text/css" href="../resources/css/cssLayout.css">
     <title>Main</title>
-    <script type="text/javascript"  src="org.yournamehere.AjoutJeu/org.yournamehere.AjoutJeu.nocache.js"></script>
+    <script type="text/javascript"  src="../org.yournamehere.AjoutImage/org.yournamehere.AjoutImage.nocache.js"></script>
   </head>
   <body>
 <!--         <iframe src="javascript:''" id="__gwt_historyFrame" style="width:0;height:0;border:0"></iframe> -->
