--- a/web/gwt/welcomeGWT.html
+++ b/web/gwt/welcomeGWT.html
@@ -7,11 +7,11 @@ lead to some differences in layout.
 <html>
     <head>
         <!--<meta name='gwt:module' content='org.yournamehere.Main=org.yournamehere.Main'>-->
-        <link rel="stylesheet" type="text/css" href="welcomeGWT.css">
-        <link rel="stylesheet" type="text/css" href="MenuBar.css">
-        <link rel="stylesheet" type="text/css" href="resources/css/cssLayout.css">
+        <link rel="stylesheet" type="text/css" href="../resources/css/welcomeGWT.css">
+        <link rel="stylesheet" type="text/css" href="../resources/css/MenuBar.css">
+        <link rel="stylesheet" type="text/css" href="../resources/css/cssLayout.css">
         <title>Main</title>
-        <script type="text/javascript"  src="org.yournamehere.SupprimerCompte/org.yournamehere.SupprimerCompte.nocache.js"></script>
+        <script type="text/javascript"  src="../org.yournamehere.Main/org.yournamehere.Main.nocache.js"></script>
         <!--<script type="text/javascript"  src="org.yournamehere.AjoutJeu/org.yournamehere.AjoutJeu.nocache.js"></script>-->
     </head>
     <body>
